--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     ],
     "require": {
         "smsgatewayme/client": "^0.0.1",
-        "league/csv": "^9.1"
+        "league/csv": "^9.1",
+        "phpoffice/phpspreadsheet": "^1.5"
     }
 }
